--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  background-color: #000613;
+
 }
 
 .App-logo {
@@ -14,7 +16,6 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -26,6 +27,7 @@
 
 .App-link {
   color: #61dafb;
+  color: #a3cc0f;
 }
 
 @keyframes App-logo-spin {
